tests/baselines/reference/computedPropertyNamesContextualType8_ES5.errors.txt
tests/cases/conformance/es6/computedProperties/computedPropertyNamesContextualType8_ES5.ts(7,5): error TS2322: Type 'string' is not assignable to type 'boolean'.
tests/cases/conformance/es6/computedProperties/computedPropertyNamesContextualType8_ES5.ts(8,5): error TS2322: Type 'number' is not assignable to type 'boolean'.


==== tests/cases/conformance/es6/computedProperties/computedPropertyNamesContextualType8_ES5.ts (2 errors) ====
    interface I {
        [s: string]: boolean;
        [s: number]: boolean;
    }
    
    var o: I = {
        [""+"foo"]: "",
        ~~~~~~~~~~
!!! error TS2322: Type 'string' is not assignable to type 'boolean'.
        [""+"bar"]: 0
        ~~~~~~~~~~
!!! error TS2322: Type 'number' is not assignable to type 'boolean'.
    }